my-app/templates/backend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: my-app-backend
spec:
  type: ClusterIP
  selector:
    app: my-app-backend
  ports:
    - protocol: TCP
      port: 5000
      targetPort: 5000
  type: ClusterIP
