my-app/templates/frontend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: my-app-frontend
spec:
  type: ClusterIP
  selector:
    app: my-app-frontend
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
