my-app/templates/mongodb-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: my-db
spec:
  type: ClusterIP
  selector:
    app: my-db
  ports:
    - protocol: TCP
      port: 27017
      targetPort: 27017
